add jquery-autocomplete onto left sliding-panel

--- a/src/css/simple-sidebar.css
+++ b/src/css/simple-sidebar.css
@@ -29,7 +29,7 @@ body {
     height: 100%;
     margin-left: -250px;
     overflow-y: auto;
-    background: #c59333;
+    background: #0e637d;
     -webkit-transition: all 0.5s ease;
     -moz-transition: all 0.5s ease;
     -o-transition: all 0.5s ease;
