--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,11 +1,102 @@
-html,
-body {
-    font-family: Arial, sans-serif;
-    height: 100%;
+html, body, div, span, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+abbr, address, cite, code, del, dfn, em, img, ins, kbd, q, samp,
+small, strong, sub, sup, var, b, i, dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section, summary,
+time, mark, audio, video {
     margin: 0;
     padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
 }
 
+html, body {
+    width:100%;
+    height:100%;
+    background:#eceef9 url(../images/bg.jpg);
+}
+
+#container {
+    width:240px;
+    height:100%;
+    margin:0 auto;
+    position:relative;
+}
+
+#main {
+    width:240px;
+    position:absolute;
+    top:50%;
+    margin:-10px 0 -120px 0;
+}
+
+/*-------------
+SEARCH BOX BEGIN
+-------------*/
+
+#searchForm fieldset {
+    width:100%;
+    position:relative;
+    display:block;
+    padding:0em 0.5em;
+}
+
+div.input {
+    width:100%;
+    padding:7.7px 15px 7px 15px;
+    border-radius:20px;
+    border:1px solid #c6d2db;
+    border-top:1px solid #b4c1cb;
+    box-shadow:inset 0 1px 2px rgba(0,0,0,0.08);
+    float:right;
+    background:#e8edf1;
+}
+
+div.input.focus {
+    border:1px solid #9ecbe2;
+    box-shadow:0 0 6px #abdcff, inset 0 1px 2px rgba(0,0,0,0.08);
+}
+
+input#s {
+    width:100%;
+    border:0;
+    border-radius:20px;
+    background:transparent;
+    height:16px;
+    color:#b4bdc4;
+    text-shadow:0 1px 1px #fff;
+}
+
+input#s:focus {
+    outline:none
+}
+
+input#searchSubmit {
+    width:19px;
+    height:19px;
+    text-indent:-9999px;
+    overflow:hidden;
+    background:url(../images/search-icon.png) no-repeat;
+    border:0;
+    position:absolute;
+    top:7px; right:13px;
+    z-index:5;
+    display:none;
+    cursor:pointer;
+}
+
+/*-------------
+SEARCH BOX END
+-------------*/
+
+/*-------------
+SET GOOGLE MAP DIV HEIGHT
+-------------*/
 #map-canvas {
     height: 100%;
 }
@@ -26,4 +117,9 @@ body {
 
 .container-fluid, .row {
     padding:0px;
+}
+
+.searchbox-col {
+    margin-top: 15px;
+    margin-left: 15px;
 }
