--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,20 +1,4 @@
-html, body, div, span, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-abbr, address, cite, code, del, dfn, em, img, ins, kbd, q, samp,
-small, strong, sub, sup, var, b, i, dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section, summary,
-time, mark, audio, video {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    font-size: 100%;
-    font: inherit;
-    vertical-align: baseline;
-}
-
+html, body { height: 100%; margin: 0; padding: 0; }
 
 #container {
     width:240px;
@@ -36,6 +20,7 @@ time, mark, audio, video {
 
 h1.page-header {
     color: white;
+    font-size: 26px;
 }
 
 .input-group {
@@ -53,7 +38,7 @@ info window begin
 #map-canvas {
     margin: 0;
     padding: 0;
-    height: 400px;
+    height: 100%;
     max-width: none;
 }
 
