--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,4 +1,12 @@
-html, body { height: 100%; margin: 0; padding: 0; }
+html{
+    height:100%
+}
+
+body{
+    height:100%;
+    margin:0px;
+    padding:0px
+}
 
 #container {
     width:240px;
